viya/sas-bases/overlays/network/istio/components/sas-analytics-services/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-analytics-data-segmentation
spec:
  host: sas-analytics-data-segmentation
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /analyticsDataSegmentation/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-analytics-flows
spec:
  host: sas-analytics-flows
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /analyticsFlows/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-analytics-localization
spec:
  host: sas-analytics-localization
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /analyticsLocalization/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-analytics-pipelines
spec:
  host: sas-analytics-pipelines
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /analyticsPipelines/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-analytics-validation
spec:
  host: sas-analytics-validation
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /analyticsValidation/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-analytics-services
    sas.com/admin: namespace
  name: sas-analytics-data-segmentation
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /analyticsDataSegmentation
    - uri:
        prefix: /analyticsDataSegmentation/
    route:
    - destination:
        host: sas-analytics-data-segmentation
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-analytics-services
    sas.com/admin: namespace
  name: sas-analytics-flows
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /analyticsFlows
    - uri:
        prefix: /analyticsFlows/
    route:
    - destination:
        host: sas-analytics-flows
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-analytics-services
    sas.com/admin: namespace
  name: sas-analytics-localization
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /analyticsLocalization
    - uri:
        prefix: /analyticsLocalization/
    route:
    - destination:
        host: sas-analytics-localization
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-analytics-services
    sas.com/admin: namespace
  name: sas-analytics-pipelines
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /analyticsPipelines
    - uri:
        prefix: /analyticsPipelines/
    route:
    - destination:
        host: sas-analytics-pipelines
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-analytics-services
    sas.com/admin: namespace
  name: sas-analytics-validation
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /analyticsValidation
    - uri:
        prefix: /analyticsValidation/
    route:
    - destination:
        host: sas-analytics-validation
    timeout: 300s
